--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="card mx-auto" style="width: 18rem;">
             <img class="card-img-top" src="./assets/img/logo-sass.jpg" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title text-purple">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                     card's
                     content.</p>
